Bug 1808985: Check for force-enabled WebGPU in the proper order. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D166856